tests/parser/invalid/003-if-without-condition.man
def main()
    if
        foo()
    end
end
